--- a/index.html
+++ b/index.html
@@ -1,177 +1,62 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jarvis AI by AP</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Jarvis by Abhii Patil</title>
   <style>
-    :root {
-      --primary-color: #00fff7;
-      --secondary-color: #00a8a5;
-      --bg-color: #0f0f0f;
-      --text-color: #ffffff;
-      --accent-color: #007c7a;
-      --error-color: #ff4444;
-    }
-
     body {
       margin: 0;
-      padding: 0;
-      background: #000;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: var(--text-color);
-      overflow-x: hidden;
+      background: #0f0f0f;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
-
-    .header {
+    header {
+      padding: 1rem;
       text-align: center;
-      padding: 15px 20px;
-      color: var(--primary-color);
-      background: var(--bg-color);
-      box-shadow: 0 0 15px var(--primary-color);
-      position: relative;
-      z-index: 10;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 15px;
-    }
-
-    .logo {
-      font-size: 24px;
+      background: #1f1f1f;
+      font-size: 1.5rem;
       font-weight: bold;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      transition: transform 0.3s ease;
     }
-
-    .logo:hover {
-      transform: scale(1.05);
-    }
-
-    .features {
+    nav {
       display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
       justify-content: center;
+      gap: 2rem;
+      background: #222;
+      padding: 0.5rem;
     }
-
-    .feature {
-      background: rgba(0, 255, 247, 0.1);
-      padding: 5px 12px;
-      border-radius: 20px;
-      font-size: 12px;
-      border: 1px solid var(--primary-color);
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      transition: all 0.3s ease;
-    }
-
-    .feature:hover {
-      background: rgba(0, 255, 247, 0.2);
-      transform: translateY(-2px);
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      position: relative;
-    }
-
-    .launch-container {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .launch-button {
-      background: var(--primary-color);
-      color: #000;
-      padding: 14px 28px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+    nav a {
+      color: white;
       text-decoration: none;
-      transition: background 0.3s;
     }
-
-    .launch-button:hover {
-      background: var(--secondary-color);
+    .content {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
     }
-
-    .footer {
+    footer {
+      background: #1f1f1f;
       text-align: center;
-      padding: 12px;
-      background: var(--bg-color);
-      color: var(--primary-color);
-      font-size: 12px;
-      border-top: 1px solid var(--accent-color);
-    }
-
-    @media (max-width: 768px) {
-      .header {
-        padding: 12px 15px;
-        gap: 10px;
-      }
-
-      .logo {
-        font-size: 20px;
-      }
-
-      .features {
-        gap: 8px;
-      }
-
-      .feature {
-        font-size: 10px;
-        padding: 4px 10px;
-      }
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: 3rem;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <div class="logo">
-        <i class="fas fa-robot"></i>
-        <span>Jarvis AI Chatbot</span>
-      </div>
-      <div class="features">
-        <div class="feature">
-          <i class="fas fa-key"></i> No API Key
-        </div>
-        <div class="feature">
-          <i class="fas fa-microphone"></i> Voice Support
-        </div>
-        <div class="feature">
-          <i class="fas fa-bolt"></i> Fast Response
-        </div>
-      </div>
-    </div>
-
-    <div class="launch-container">
-      <a class="launch-button" href="https://chatbot-ui.pages.dev" target="_blank">
-        🚀 Launch Jarvis AI Chatbot
-      </a>
-      <p style="color:gray; font-size:14px; margin-top:10px;">(Opens in new tab)</p>
-    </div>
-
-    <div class="footer">
-      © 2025 Jarvis AI Chatbot | Free to use | No API Key Required <br>
-      Creator: <a href="tel:+919545002367" style="color:#00fff7; text-decoration: none;">+91-9545002367</a>
-    </div>
+  <header>Jarvis by Abhii Patil</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="chat.html">Chat</a>
+    <a href="india.html">India</a>
+    <a href="shivaji.html">Shivaji</a>
+    <a href="calculator.html">Calculator</a>
+  </nav>
+  <div class="content">
+    <h2>Welcome to Jarvis AI</h2>
+    <p>This is an offline smart assistant developed by Abhii Patil. It includes India info, Shivaji Maharaj facts, JEE data, and math solving abilities.</p>
+    <p>Instagram: <a href="https://instagram.com/paatillll_002" target="_blank">@paatillll_002</a></p>
   </div>
+  <footer>Made with ❤️ by Abhii Patil</footer>
 </body>
 </html>
